# chat

./: CMakeLists.txt  README.md  autobuild.sh  msg.txt
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  usermodel.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
testjson/: testjson.cpp
testmuduo/: muduo_server.cpp  server
